Set correct align for tooltip

--- a/src/styles.less
+++ b/src/styles.less
@@ -11,6 +11,7 @@
         margin-right: 4px;
         border-radius: 10px;
         display: inline-block;
+        position: relative;
         &:hover {
             .fp-tooltip {
                 opacity: 1;
@@ -29,8 +30,10 @@
         box-shadow: 0 0 1px 1px rgba(52, 63, 74, 0.2);
         padding: 3px 5px;
         border-radius: 2px;
-        top: -37px;
-        left: -69px;
+        bottom: 18px;
+        width: 130px;
+        margin-left: -65px;
+        left: 50%;
         margin-right: 4px;
     }
     &tooltip-arrow {
